# FreeLip

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  environment.yml  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
config/: freelip.debug.json
docs/: internal-mvp.md
models/: DEBUG_BUNDLE_README.md  roi-landmark.md
python/: pyproject.toml
python/freelip_contracts/: __init__.py
python/freelip_eval/: purge_debug_logs.py  rerank.py  run.py  usability_rules.py  validate_suite.py  verify_docs.py
python/freelip_vsr/: __init__.py  check_model.py  cnvsrc_runtime.py  model_registry.py  sidecar.py
python/tests/: test_check_model.py  test_contract_schema.py  test_eval_failure_breakdown.py  test_eval_suite_validation.py  test_llm_payload_privacy.py  test_no_secret_examples.py  test_rerank_timeout_fallback.py  test_sidecar_api.py  test_sidecar_fixture_decode.py  test_top5_usability_rules.py
scripts/: test_ui.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/freelip-contracts/: Cargo.toml
src-tauri/crates/freelip-contracts/src/: lib.rs
src-tauri/crates/freelip-contracts/tests/: contract_schema.rs
src-tauri/crates/freelip-core/: Cargo.toml
src-tauri/crates/freelip-core/src/: lib.rs
src-tauri/crates/freelip-core/tests/: debug_log_retention.rs  dictionary_learning.rs  full_loop_integration.rs  hotkey_state_machine.rs  insertion_state_machine.rs  roi_landmark_model.rs  roi_pipeline.rs  roi_quality_fixture.rs
src-tauri/src/: lib.rs  main.rs
(+53 files in other folders)
