[package]
name = "freelip-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "freelip_tauri"
path = "src/lib.rs"

[dependencies]
freelip-contracts = { path = "crates/freelip-contracts" }

[target.'cfg(windows)'.dependencies]
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
tauri-build = { version = "2", features = [] }
